<resources>
    <string name="app_name">SEGProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!--    <string name="password">Email</string>-->

    <string name="username_hint">Please enter your Username or Email</string>
    <string name="password_hint">Please enter your password</string>

    <string name="signup_button">Not a member? Click here to sign up!</string>
    <string name="login">Log in to Byblos!</string>
    <string name="login_button">Log in!</string>

    <string name="welcome">Welcome </string>


    //strings for sign up page//
    <string name="signup_username_hint">Username</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_role">Role</string>

    //roles//
    <string name="customer_role">Customer</string>
    <string name="employee_role">Employee</string>
    <string name="admin_role">Admin</string>

    //sign up //
    <string name="signup">Register!</string>
    <string name="createAccount">Create an account!</string>
    <string name="welcomeMessage">Welcome </string>
    <string name="welcomeMessage2">Role: </string>

    <string name="logout_button">LOGOUT</string>

    <string name="admin_text">Welcome Admin</string>

    //admin only info//
    <string name="numEmployees">Number of Employees:</string>
    <string name="numCustomers">Number of Customers:</string>
    <string name="numServices">Number of Services:</string>

    //admin only button//
    <string name="edit_accounts_button">Edit Accounts</string>
    <string name="services_button">Services</string>
    <string name="admin_logout_button">Admin Logout</string>

    <string name="delete_text">Select an Account to Update/Delete</string>
    <string name="customer_text">Customers</string>
    <string name="employee_text">Employees</string>

    <string name="account_delete">Delete Account!</string>

    //delete account textviews
    <string name="username_delete_text">Username:</string>
    <string name="email_delete_text">Email:</string>

    //update user info//
    <string name="update_username_hint">Enter New Username</string>
    <string name="update_email_hint">Enter New Email</string>
    <string name="update_password_hint">Enter New password</string>

    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="servicesText">Services</string>

    <string name="create_truckrental_text">New Truck Rental</string>
    <string name="create_carrental_text">New Car Rental</string>
    <string name="create_moving_text">New Moving Assistance</string>
    <string name="addService">Add service</string>
    <string name="add_service_text">Add service</string>
    <string name="editService">Edit service</string>
    <string name="edit_service_text">Edit service</string>
    <string name="delete_service_text">Delete service</string>
    <!--    <string name="numEmployees">Number of Employees:</string>-->
    <!--    <string name=""></string>-->


    <string name="back_button"> Back </string>

    // employee activity
    <string name="display_employee_address">Address: </string>
    <string name="display_employee_phoneNum">Phone Number: </string>
    <string name="title_activity_employee_working_hours">EmployeeWorkingHours</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>