<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/usernameUpdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_username_hint"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailUpdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_email_hint"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordUpdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_password_hint"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/updateCustomerRoleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/customer_role" />

        <RadioButton
            android:id="@+id/updateEmployerRoleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/employee_role" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updateServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#84B58F"
            android:text="@string/update" />

        <Button
            android:id="@+id/deleteUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#53805D"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>