<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deleteAccountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delete_text"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customerDeleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/customer_text"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/CustomerListView"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/EmployeeDeleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/employee_text"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/EmployeeListView"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:layout_weight="1">

                </ListView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>