<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5779585"
    android:backgroundTint="#C143835B"
    tools:context=".CustomerWelcomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/custNameTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:backgroundTint="#6048784A"
            android:ems="10"
            android:gravity="center|center_horizontal|center_vertical"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/welcomeMessage"
            android:textAlignment="center"
            android:textColor="#C1FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/custRoleTextView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="#6048784A"
            android:ems="10"
            android:gravity="center|center_horizontal|center_vertical"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/welcomeMessage2"
            android:textColor="#FFFFFF"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:backgroundTint="#6078CD9E" />

        <TextView
            android:id="@+id/custSearchField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="bottom|left"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="  Search For Branch"
            android:textColor="#94E1EAE2"
            android:textSize="20sp" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/custLogoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5151918B"
            android:text="@string/logout_button" />

    </LinearLayout>
</RelativeLayout>