<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BranchDisplay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#50835F"
        android:orientation="vertical">


        <TextView
            android:id="@+id/branchProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#82AF84"
            android:textColor="@color/white"
            android:paddingVertical="20dp"
            android:gravity="center"
            android:text="Byblos Branch"
            android:textSize="40sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <Button
                    android:id="@+id/rateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B4D1B5"
                    android:text="Rate Us" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/yourRatingBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Your rating:"
                    android:textColor="#404040"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/customerRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#689F82"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/customerComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#404040"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/branchAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display_employee_address"
                    android:textColor="#689F82"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30sp" />

                <TextView
                    android:id="@+id/branchPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display_employee_phoneNum"
                    android:textColor="#689F82"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30sp" />

                <TextView
                    android:id="@+id/branchHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Working hours: "
                    android:textColor="#689F82"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30sp" />

                <TextView
                    android:id="@+id/branchServices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Services Offered: "
                    android:textColor="#689F82"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <ListView
                    android:id="@+id/branchServiceList"
                    android:layout_width="match_parent"
                    android:layout_height="284dp" >

                </ListView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/custLogoutButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#7EA186"
                    android:text="@string/logout_button" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</RelativeLayout>
